--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 
 body {
   display: flex;
-  background-color: #57407c;
+  background-color: darkturquoise;
   flex-direction: column;
   justify-content: center;
   align-content: center;
@@ -26,7 +26,7 @@ body {
   width: 440px;
   height: 440px;
   padding: 5px;
-  background-color: #57407c;
+  background-color: black;
   border-radius: 7px;
   outline: none;
   position: relative;
@@ -46,16 +46,16 @@ body {
 }
 
 .resetButton {
-  background-color: #3d2963;
-  color: rgba(255, 255, 255, 0.5);
+  background-color: crimson;
+  color: white;
   cursor: pointer;
   font-size: 25px;
   padding: 10px 20px;
   border-radius: 7px;
   transition: color 0.3s ease, background-color 0.3s ease;
   &:hover {
-    background-color: #d3386a;
-    color: rgba(255, 255, 255, 1);
+    background-color: yellow;
+    color: black;
   }
 }
 
@@ -64,8 +64,8 @@ body {
 }
 
 .score-box {
-  background-color: #3d2963;
-  color: rgba(255, 255, 255, 0.5);
+  background-color: crimson;
+  color: white;
   min-width: 50px;
   width: 70px;
   padding: 5px 15px;
@@ -86,7 +86,7 @@ body {
   border-radius: 7px;
   font-family: "Clear Sans";
   color: #766;
-  background-color: #3d2963;
+  background-color: #480e3e;
 }
 
 .tile0 {
